--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -2,6 +2,607 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "import os\n",
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Xavier Initialization\n",
+    "def xavier_init(size):\n",
+    "    in_dim = size[0]\n",
+    "    xavier_stddev = 1. / tf.sqrt(in_dim / 2.)\n",
+    "    return tf.random_normal(shape=size, stddev=xavier_stddev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot(samples):\n",
+    "    fig = plt.figure(figsize=(4, 4))\n",
+    "    gs = gridspec.GridSpec(4, 4)\n",
+    "    gs.update(wspace=0.05, hspace=0.05)\n",
+    "\n",
+    "    for i, sample in enumerate(samples):\n",
+    "        ax = plt.subplot(gs[i])\n",
+    "        plt.axis('off')\n",
+    "        ax.set_xticklabels([])\n",
+    "        ax.set_yticklabels([])\n",
+    "        ax.set_aspect('equal')\n",
+    "        plt.imshow(sample.reshape(28, 28), cmap='Greys_r')\n",
+    "\n",
+    "    return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sample_Z(m, n):\n",
+    "    return np.random.uniform(-1., 1., size=[m, n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Generator Net\n",
+    "Z = tf.placeholder(tf.float32, shape=[None, 100], name='Z')\n",
+    "G_W1 = tf.Variable(xavier_init([100, 128]), name='G_W1')\n",
+    "G_b1 = tf.Variable(tf.zeros(shape=[128]), name='G_b1')\n",
+    "G_W2 = tf.Variable(xavier_init([128, 784]), name='G_W2')\n",
+    "G_b2 = tf.Variable(tf.zeros(shape=[784]), name='G_b2')\n",
+    "\n",
+    "theta_G = [G_W1, G_W2, G_b1, G_b2]\n",
+    "\n",
+    "def generator(z):\n",
+    "    G_h1 = tf.nn.relu(tf.matmul(z, G_W1) + G_b1)\n",
+    "    G_log_prob = tf.matmul(G_h1, G_W2) + G_b2\n",
+    "    G_prob = tf.nn.sigmoid(G_log_prob)\n",
+    "    return G_prob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Discriminator Net\n",
+    "X = tf.placeholder(tf.float32, shape=[None, 784], name='X')\n",
+    "D_W1 = tf.Variable(xavier_init([784, 128]), name='D_W1')\n",
+    "D_b1 = tf.Variable(tf.zeros(shape=[128]), name='D_b1')\n",
+    "D_W2 = tf.Variable(xavier_init([128, 1]), name='D_W2')\n",
+    "D_b2 = tf.Variable(tf.zeros(shape=[1]), name='D_b2')\n",
+    "\n",
+    "theta_D = [D_W1, D_W2, D_b1, D_b2]\n",
+    "\n",
+    "def discriminator(x):\n",
+    "    D_h1 = tf.nn.relu(tf.matmul(x, D_W1) + D_b1)\n",
+    "    D_h1_dropout = tf.nn.dropout(D_h1, 0.8)\n",
+    "    D_logit = tf.matmul(D_h1_dropout, D_W2) + D_b2\n",
+    "    D_prob = tf.nn.sigmoid(D_logit)\n",
+    "\n",
+    "    return D_prob, D_logit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n",
+      "Iter: 0\n",
+      "D loss: 1.079\n",
+      "G_loss: 3.005\n",
+      "\n",
+      "Iter: 1000\n",
+      "D loss: 0.04477\n",
+      "G_loss: 5.105\n",
+      "\n",
+      "Iter: 2000\n",
+      "D loss: 0.2059\n",
+      "G_loss: 3.99\n",
+      "\n",
+      "Iter: 3000\n",
+      "D loss: 0.1941\n",
+      "G_loss: 3.446\n",
+      "\n",
+      "Iter: 4000\n",
+      "D loss: 0.3815\n",
+      "G_loss: 3.111\n",
+      "\n",
+      "Iter: 5000\n",
+      "D loss: 0.2786\n",
+      "G_loss: 2.77\n",
+      "\n",
+      "Iter: 6000\n",
+      "D loss: 0.4854\n",
+      "G_loss: 2.645\n",
+      "\n",
+      "Iter: 7000\n",
+      "D loss: 0.5194\n",
+      "G_loss: 2.056\n",
+      "\n",
+      "Iter: 8000\n",
+      "D loss: 0.6008\n",
+      "G_loss: 2.305\n",
+      "\n",
+      "Iter: 9000\n",
+      "D loss: 0.6885\n",
+      "G_loss: 1.876\n",
+      "\n",
+      "Iter: 10000\n",
+      "D loss: 0.6687\n",
+      "G_loss: 2.053\n",
+      "\n",
+      "Iter: 11000\n",
+      "D loss: 0.8273\n",
+      "G_loss: 1.765\n",
+      "\n",
+      "Iter: 12000\n",
+      "D loss: 0.6994\n",
+      "G_loss: 2.165\n",
+      "\n",
+      "Iter: 13000\n",
+      "D loss: 0.693\n",
+      "G_loss: 2.053\n",
+      "\n",
+      "Iter: 14000\n",
+      "D loss: 0.8414\n",
+      "G_loss: 2.089\n",
+      "\n",
+      "Iter: 15000\n",
+      "D loss: 0.6876\n",
+      "G_loss: 2.024\n",
+      "\n",
+      "Iter: 16000\n",
+      "D loss: 0.7709\n",
+      "G_loss: 1.731\n",
+      "\n",
+      "Iter: 17000\n",
+      "D loss: 0.8485\n",
+      "G_loss: 1.78\n",
+      "\n",
+      "Iter: 18000\n",
+      "D loss: 0.7778\n",
+      "G_loss: 1.678\n",
+      "\n",
+      "Iter: 19000\n",
+      "D loss: 0.7946\n",
+      "G_loss: 1.781\n",
+      "\n",
+      "Iter: 20000\n",
+      "D loss: 0.8852\n",
+      "G_loss: 1.922\n",
+      "\n",
+      "Iter: 21000\n",
+      "D loss: 0.8614\n",
+      "G_loss: 1.873\n",
+      "\n",
+      "Iter: 22000\n",
+      "D loss: 0.7551\n",
+      "G_loss: 1.829\n",
+      "\n",
+      "Iter: 23000\n",
+      "D loss: 0.7607\n",
+      "G_loss: 1.838\n",
+      "\n",
+      "Iter: 24000\n",
+      "D loss: 0.6505\n",
+      "G_loss: 1.891\n",
+      "\n",
+      "Iter: 25000\n",
+      "D loss: 0.8448\n",
+      "G_loss: 1.953\n",
+      "\n",
+      "Iter: 26000\n",
+      "D loss: 0.8104\n",
+      "G_loss: 1.799\n",
+      "\n",
+      "Iter: 27000\n",
+      "D loss: 0.742\n",
+      "G_loss: 2.025\n",
+      "\n",
+      "Iter: 28000\n",
+      "D loss: 0.7813\n",
+      "G_loss: 2.168\n",
+      "\n",
+      "Iter: 29000\n",
+      "D loss: 0.6757\n",
+      "G_loss: 1.953\n",
+      "\n",
+      "Iter: 30000\n",
+      "D loss: 0.6741\n",
+      "G_loss: 1.953\n",
+      "\n",
+      "Iter: 31000\n",
+      "D loss: 0.824\n",
+      "G_loss: 1.953\n",
+      "\n",
+      "Iter: 32000\n",
+      "D loss: 0.7102\n",
+      "G_loss: 1.951\n",
+      "\n",
+      "Iter: 33000\n",
+      "D loss: 0.5717\n",
+      "G_loss: 1.967\n",
+      "\n",
+      "Iter: 34000\n",
+      "D loss: 0.707\n",
+      "G_loss: 2.044\n",
+      "\n",
+      "Iter: 35000\n",
+      "D loss: 0.578\n",
+      "G_loss: 2.074\n",
+      "\n",
+      "Iter: 36000\n",
+      "D loss: 0.7984\n",
+      "G_loss: 2.16\n",
+      "\n",
+      "Iter: 37000\n",
+      "D loss: 0.7694\n",
+      "G_loss: 1.91\n",
+      "\n",
+      "Iter: 38000\n",
+      "D loss: 0.7568\n",
+      "G_loss: 1.771\n",
+      "\n",
+      "Iter: 39000\n",
+      "D loss: 0.7177\n",
+      "G_loss: 2.124\n",
+      "\n",
+      "Iter: 40000\n",
+      "D loss: 0.6663\n",
+      "G_loss: 2.151\n",
+      "\n",
+      "Iter: 41000\n",
+      "D loss: 0.8436\n",
+      "G_loss: 1.99\n",
+      "\n",
+      "Iter: 42000\n",
+      "D loss: 0.6196\n",
+      "G_loss: 2.018\n",
+      "\n",
+      "Iter: 43000\n",
+      "D loss: 0.6113\n",
+      "G_loss: 2.187\n",
+      "\n",
+      "Iter: 44000\n",
+      "D loss: 0.6894\n",
+      "G_loss: 2.277\n",
+      "\n",
+      "Iter: 45000\n",
+      "D loss: 0.6936\n",
+      "G_loss: 2.142\n",
+      "\n",
+      "Iter: 46000\n",
+      "D loss: 0.6162\n",
+      "G_loss: 2.194\n",
+      "\n",
+      "Iter: 47000\n",
+      "D loss: 0.7678\n",
+      "G_loss: 2.2\n",
+      "\n",
+      "Iter: 48000\n",
+      "D loss: 0.6521\n",
+      "G_loss: 2.368\n",
+      "\n",
+      "Iter: 49000\n",
+      "D loss: 0.8123\n",
+      "G_loss: 2.011\n",
+      "\n",
+      "Iter: 50000\n",
+      "D loss: 0.5614\n",
+      "G_loss: 2.158\n",
+      "\n",
+      "Iter: 51000\n",
+      "D loss: 0.7244\n",
+      "G_loss: 1.889\n",
+      "\n",
+      "Iter: 52000\n",
+      "D loss: 0.582\n",
+      "G_loss: 2.05\n",
+      "\n",
+      "Iter: 53000\n",
+      "D loss: 0.6157\n",
+      "G_loss: 2.129\n",
+      "\n",
+      "Iter: 54000\n",
+      "D loss: 0.7549\n",
+      "G_loss: 2.247\n",
+      "\n",
+      "Iter: 55000\n",
+      "D loss: 0.5676\n",
+      "G_loss: 2.01\n",
+      "\n",
+      "Iter: 56000\n",
+      "D loss: 0.6055\n",
+      "G_loss: 1.929\n",
+      "\n",
+      "Iter: 57000\n",
+      "D loss: 0.5723\n",
+      "G_loss: 2.067\n",
+      "\n",
+      "Iter: 58000\n",
+      "D loss: 0.7464\n",
+      "G_loss: 2.272\n",
+      "\n",
+      "Iter: 59000\n",
+      "D loss: 0.6724\n",
+      "G_loss: 2.108\n",
+      "\n",
+      "Iter: 60000\n",
+      "D loss: 0.637\n",
+      "G_loss: 2.105\n",
+      "\n",
+      "Iter: 61000\n",
+      "D loss: 0.6355\n",
+      "G_loss: 2.185\n",
+      "\n",
+      "Iter: 62000\n",
+      "D loss: 0.6196\n",
+      "G_loss: 2.163\n",
+      "\n",
+      "Iter: 63000\n",
+      "D loss: 0.6408\n",
+      "G_loss: 2.073\n",
+      "\n",
+      "Iter: 64000\n",
+      "D loss: 0.6128\n",
+      "G_loss: 2.125\n",
+      "\n",
+      "Iter: 65000\n",
+      "D loss: 0.6801\n",
+      "G_loss: 1.931\n",
+      "\n",
+      "Iter: 66000\n",
+      "D loss: 0.6539\n",
+      "G_loss: 2.063\n",
+      "\n",
+      "Iter: 67000\n",
+      "D loss: 0.6774\n",
+      "G_loss: 1.969\n",
+      "\n",
+      "Iter: 68000\n",
+      "D loss: 0.5427\n",
+      "G_loss: 1.997\n",
+      "\n",
+      "Iter: 69000\n",
+      "D loss: 0.5944\n",
+      "G_loss: 1.871\n",
+      "\n",
+      "Iter: 70000\n",
+      "D loss: 0.6848\n",
+      "G_loss: 2.035\n",
+      "\n",
+      "Iter: 71000\n",
+      "D loss: 0.6454\n",
+      "G_loss: 2.239\n",
+      "\n",
+      "Iter: 72000\n",
+      "D loss: 0.6364\n",
+      "G_loss: 2.17\n",
+      "\n",
+      "Iter: 73000\n",
+      "D loss: 0.6345\n",
+      "G_loss: 1.941\n",
+      "\n",
+      "Iter: 74000\n",
+      "D loss: 0.7159\n",
+      "G_loss: 2.05\n",
+      "\n",
+      "Iter: 75000\n",
+      "D loss: 0.6349\n",
+      "G_loss: 1.836\n",
+      "\n",
+      "Iter: 76000\n",
+      "D loss: 0.5362\n",
+      "G_loss: 1.983\n",
+      "\n",
+      "Iter: 77000\n",
+      "D loss: 0.6899\n",
+      "G_loss: 1.988\n",
+      "\n",
+      "Iter: 78000\n",
+      "D loss: 0.6763\n",
+      "G_loss: 1.803\n",
+      "\n",
+      "Iter: 79000\n",
+      "D loss: 0.5931\n",
+      "G_loss: 2.153\n",
+      "\n",
+      "Iter: 80000\n",
+      "D loss: 0.7248\n",
+      "G_loss: 2.029\n",
+      "\n",
+      "Iter: 81000\n",
+      "D loss: 0.7182\n",
+      "G_loss: 2.067\n",
+      "\n",
+      "Iter: 82000\n",
+      "D loss: 0.6184\n",
+      "G_loss: 2.019\n",
+      "\n",
+      "Iter: 83000\n",
+      "D loss: 0.4632\n",
+      "G_loss: 1.985\n",
+      "\n",
+      "Iter: 84000\n",
+      "D loss: 0.6138\n",
+      "G_loss: 1.911\n",
+      "\n",
+      "Iter: 85000\n",
+      "D loss: 0.7524\n",
+      "G_loss: 2.116\n",
+      "\n",
+      "Iter: 86000\n",
+      "D loss: 0.7116\n",
+      "G_loss: 1.955\n",
+      "\n",
+      "Iter: 87000\n",
+      "D loss: 0.7192\n",
+      "G_loss: 2.075\n",
+      "\n",
+      "Iter: 88000\n",
+      "D loss: 0.6917\n",
+      "G_loss: 1.976\n",
+      "\n",
+      "Iter: 89000\n",
+      "D loss: 0.5883\n",
+      "G_loss: 2.265\n",
+      "\n",
+      "Iter: 90000\n",
+      "D loss: 0.6532\n",
+      "G_loss: 2.091\n",
+      "\n",
+      "Iter: 91000\n",
+      "D loss: 0.6992\n",
+      "G_loss: 2.119\n",
+      "\n",
+      "Iter: 92000\n",
+      "D loss: 0.6813\n",
+      "G_loss: 2.167\n",
+      "\n",
+      "Iter: 93000\n",
+      "D loss: 0.5694\n",
+      "G_loss: 2.223\n",
+      "\n",
+      "Iter: 94000\n",
+      "D loss: 0.6584\n",
+      "G_loss: 2.229\n",
+      "\n",
+      "Iter: 95000\n",
+      "D loss: 0.7602\n",
+      "G_loss: 1.881\n",
+      "\n",
+      "Iter: 96000\n",
+      "D loss: 0.6915\n",
+      "G_loss: 1.889\n",
+      "\n",
+      "Iter: 97000\n",
+      "D loss: 0.7101\n",
+      "G_loss: 2.143\n",
+      "\n",
+      "Iter: 98000\n",
+      "D loss: 0.6898\n",
+      "G_loss: 2.169\n",
+      "\n",
+      "Iter: 99000\n",
+      "D loss: 0.7249\n",
+      "G_loss: 2.205\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "G_sample = generator(Z)\n",
+    "D_real, D_logit_real = discriminator(X)\n",
+    "D_fake, D_logit_fake = discriminator(G_sample)\n",
+    "\n",
+    "# D_loss = -tf.reduce_mean(tf.log(D_real) + tf.log(1. - D_fake))\n",
+    "# G_loss = -tf.reduce_mean(tf.log(D_fake))\n",
+    "\n",
+    "D_loss_real = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        labels=tf.ones_like(D_logit_real),\n",
+    "        logits=D_logit_real\n",
+    "    )\n",
+    ")\n",
+    "D_loss_fake = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        labels=tf.zeros_like(D_logit_fake),\n",
+    "        logits=D_logit_fake\n",
+    "    )\n",
+    ")\n",
+    "D_loss = D_loss_real + D_loss_fake\n",
+    "D_loss_sum = tf.summary.scalar('D_loss', D_loss)\n",
+    "G_loss = tf.reduce_mean(\n",
+    "    tf.nn.sigmoid_cross_entropy_with_logits(\n",
+    "        labels=tf.ones_like(D_logit_fake),\n",
+    "        logits=D_logit_fake\n",
+    "    )\n",
+    ")\n",
+    "G_loss_sum = tf.summary.scalar('G_loss', G_loss)\n",
+    "D_solver = tf.train.AdamOptimizer().minimize(D_loss, var_list=theta_D)\n",
+    "G_solver = tf.train.AdamOptimizer().minimize(G_loss, var_list=theta_G)\n",
+    "\n",
+    "mb_size = 128\n",
+    "Z_dim = 100\n",
+    "\n",
+    "mnist = input_data.read_data_sets('MNIST_data/', one_hot=True)\n",
+    "\n",
+    "sess = tf.Session()\n",
+    "writer = tf.summary.FileWriter('result', sess.graph)\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "if os.path.exists('out/'):\n",
+    "    shutil.rmtree('out/')\n",
+    "os.makedirs('out/')\n",
+    "\n",
+    "i = 0\n",
+    "for it in range(100000):\n",
+    "    if it % 1000 == 0:\n",
+    "        samples = sess.run(G_sample, feed_dict={Z: sample_Z(16, Z_dim)})\n",
+    "        fig = plot(samples)\n",
+    "        plt.savefig('out/{}.png'.format(str(i).zfill(3)), bbox_inches='tight')\n",
+    "        i += 1\n",
+    "        plt.close(fig)\n",
+    "\n",
+    "    X_mb, _ = mnist.train.next_batch(mb_size)\n",
+    "    _, D_loss_curr, s1 = sess.run([D_solver, D_loss, D_loss_sum], feed_dict={X: X_mb, Z: sample_Z(mb_size, Z_dim)})\n",
+    "    _, G_loss_curr, s2 = sess.run([G_solver, G_loss, G_loss_sum], feed_dict={Z: sample_Z(mb_size, Z_dim)})\n",
+    "\n",
+    "    if it % 1000 == 0:\n",
+    "        print('Iter: {}'.format(it))\n",
+    "        writer.add_summary(s1, it)\n",
+    "        writer.add_summary(s2, it)\n",
+    "        print('D loss: {:.4}'. format(D_loss_curr))\n",
+    "        print('G_loss: {:.4}'.format(G_loss_curr))\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
